*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgContainerItemsLoanInformation = Deze container en haar items zijn allen uitgeleend. De container en haar items kunnen als geretourneerd worden geregistreerd.
+msgContainerItemsAreAvailable = Deze container en haar items zijn allen beschikbaar. De container en haar items kunnen worden uitgeleend.
 lblFrom = van
 lblTo = tot
 msgStoringExportedLoansDB = De geexporteerde uilteen informatie wordt opgeslagen in de database
