--- a/modules/contactperson.properties
+++ b/modules/contactperson.properties
@@ -1,5 +1,5 @@
 #
-#Sat May 18 11:30:22 CEST 2013
+#Mon Jul 22 21:31:49 CEST 2013
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=
@@ -14,7 +14,7 @@ table_view_settings_dialog_size=500/400
 import_cd_storagemedium=
 export_fields=
 online_search_default_mode=
-field_definitions={0/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{1/&/null/&/true/&/true/&/false/&/false/&/lblInformation}{4/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{2/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{214/&/null/&/false/&/false/&/false/&/false/&/null}{9/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{10/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{3/&/null/&/true/&/false/&/false/&/false/&/null}{8/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{7/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{5/&/null/&/true/&/true/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{201/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
+field_definitions={0/&/null/&/false/&/false/&/false/&/false/&/Information}{1/&/null/&/true/&/true/&/false/&/false/&/Information}{5/&/null/&/true/&/true/&/false/&/false/&/Information}{222/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/null/&/true/&/false/&/false/&/false/&/Information}{2/&/null/&/true/&/false/&/false/&/false/&/Information}{6/&/null/&/true/&/false/&/false/&/false/&/Information}{9/&/null/&/true/&/false/&/false/&/false/&/Information}{10/&/null/&/true/&/false/&/false/&/false/&/Information}{8/&/null/&/true/&/false/&/false/&/false/&/Information}{7/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{206/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{100000222/&/null/&/false/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=
 table_column_order=1\#4\#7\#5\#
@@ -35,7 +35,7 @@ field_settings_dialog_size=491/463
 quick_view_settings_dialog_size=555/484
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={214/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{201/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={222/&/true/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{201/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
@@ -47,7 +47,7 @@ mass_update_always_use_first=false
 import_local_art=true
 import_cd_dialog_size=550/400
 mass_update_server=
-web_field_definitions={214/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/true/&/true}{6/&/100/&/0/&/false/&/false/&/false}{2/&/200/&/400/&/true/&/false/&/true}{4/&/100/&/0/&/true/&/false/&/true}{5/&/150/&/0/&/true/&/false/&/true}{9/&/100/&/0/&/false/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{8/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
+web_field_definitions={222/&/100/&/0/&/true/&/false/&/false}{100000222/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/true/&/true}{6/&/100/&/0/&/false/&/false/&/false}{2/&/200/&/400/&/true/&/false/&/true}{4/&/100/&/0/&/true/&/false/&/true}{5/&/150/&/0/&/true/&/false/&/true}{9/&/100/&/0/&/false/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{8/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
 show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
 file_import_online_service=
