*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -255,8 +255,8 @@ msgProgramAlreadyDefined = For this extension a program has already been defined
 msgFileOrExtensionNotFilled = Please fill both the extension and the program field
 msgFileDoesNotExist = File '%1' does not exist. Please insert the correct disc
 msgCouldNotExecute = Could not execute %1 (message: %2)
-msgErrorWhileExecuting = Error while executing : %1
-msgNoProgramDefinedForExtension = Could not launch the file! Define a program to handle  '%1' files in the settings panel
+msgErrorWhileExecuting = Could not open: %1
+msgNoProgramDefinedForExtension = Could not launch the file! Define a program to handle '%1' files in the settings panel
 msgInvalidExtension = The file '%1' has an invalid extension
 msgReportNoItems = There are no items which can be added to the report. Perform a search first
 msgNewItemWizard = New %1 Wizard - step %2 of %3
