*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+tpCharts = Staat u toe om een grafisch overzicht te maken van de gegevens in de geselecteerde module.
 msgContainerItemsLoanInformation = Deze container en haar items zijn allen uitgeleend. De container en haar items kunnen als geretourneerd worden geregistreerd.
 msgContainerItemsAreAvailable = Deze container en haar items zijn allen beschikbaar. De container en haar items kunnen worden uitgeleend.
 lblFrom = van
