--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpCharts = Allows you to create a graphical representation of the information contained in the selected module.
 tpICalendarLoanExport = Allows you to export the loans to an ICalendar file, which can be imported into most agenda's. The export is based on the loan due dates.
 tpUserDir = Here you can change the location of the user folder (where all data is stored).
 tpMassUpdateAlwaysUseFirst = Always uses the first result return. Quicker, but, there is no check on whether the result is a good match. Use with care! 
