*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -131,7 +131,7 @@ lblPersonOrginalOrder = Original order
 lblPersonOrderByLastname = Order by last name
 lblPersonOrderByFirstname = Order by first name
 lblRetrieveAudioCDInfo = Retrieve CD Information
-lblAddMultiple = Create Multiple
+lblAddMultiple = Create Multiple Items
 lblAdministration = Administration
 lblLoanInformation = Loan Administration
 lblLoanAdministration = Loan Administration
