--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1217,7 +1217,7 @@ sysAudiocdFieldModified=Aangepast op
 sysAudiocdFieldASIN=ASIN
 0x0024=Audiofile AF36
 0x0025=APTX
-lblAddMultiple=Meerdere aanmaken
+lblAddMultiple=Meerdere Items aanmaken
 msgCouldNotCreateChart=De grafiek kan niet worden aangemaakt. Geen van de items bevat de benodigde informatie.
 sysAudiotrackFieldArtists=Artiesten
 sysMusicalbumFieldYear=Jaar
