--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblReplaceWith = Vervang door
 lblParameters = Parameters
 lblCreateMultiple = Meerdere Aanmaken
 tpCharts = Staat u toe om een grafisch overzicht te maken van de gegevens in de geselecteerde module.
