*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblMergeItems = Merge %1
+lblDeleteUnassigned = Delete Unassigned %1
 lblParameters = Parameters
 lblCreateMultiple = Create Multiple
 lblFrom = from
