--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgDeleteQuestionUnusedItems = This will delete all unused %1. Are you sure you want to continue?
 msgValueNotFilled = Please set a value for %1 before continuing.
 msgStoringExportedLoansDB = Storing exported loans in the database
 msgStoringExportedLoansDBCompleted = Completed storing exported loans in the database
