--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,6 @@
+lblMergeItems = %1 samenvoegen
+msgDeleteQuestionUnusedItems = Deze actie verwijdert alle ongebruikte %1. Doorgaan?
+lblDeleteUnassigned = Verwijder ongebruikte %1
 lblReplaceWith = Vervang door
 lblParameters = Parameters
 lblCreateMultiple = Meerdere Aanmaken
