*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,15 @@
+msgMergeTargetSameAsSource = The selected target item is invalid as it is the same as one of the items to be merged.
+msgMergeNoItemsSelected = No items selected for merging. Please select item(s) first in the overview and try again.
+msgProcessingItemsFromModule = Processing Items from Module %1.
+msgQueryingForReferences = Querying for references. This might take a while...
+msgProcessingOfItemsSuccess = The items have been processed and are ready to be saved.
+msgProcessingItem = Processing Item [%1].
+msgSavingItem = Saving Item [%1].
+msgDeletingReplacedItems = Deleting %1 replaced property items.
+msgSavingItemsNotNeeded = There is nothing to save. Saving process skipped.
+msgMergeSavingFinished = Saving has been completed. %1 items have been updated.
+msgMergeCompleted = Merging of the items has been completed successfully. All reference have been updated.
+msgFindReplaceValuesEqual = Replacing a value with the same value is now allowed. Please adjust the values.
 msgDeleteQuestionUnusedItems = This will delete all unused %1. Are you sure you want to continue?
 msgValueNotFilled = Please set a value for %1 before continuing.
 msgStoringExportedLoansDB = Storing exported loans in the database
