--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,16 @@
+lblMergeTarget = Doel item
+msgMergeTargetSameAsSource = Het geselecteerde doel item is onjuist aangezien deze hetzelfde is als een van de items die samengevoegd gaat worden.
+msgMergeNoItemsSelected = Geen items geselecteerd om samen te voegen. Selecteer items in het overzicht en probeer opnieuw.
+msgSavingItemsNotNeeded = Er is niets om op te slaan naar de database. Deze stap wordt overgeslagen.
+msgMergeSavingFinished = Het opslaan van de items is geslaagd. %1 items zijn bijgewerkt.
+msgProcessingItemsFromModule = Bezig met het verwerken van items van de %1 module.
+msgDeletingReplacedItems = Bezig met het verwijderen van %1 vervangen properties.
+msgProcessingItem = Bezig met verwerken item: [%1].
+msgQueryingForReferences = Referenties worden opgehaald. Dit kan wel even wat tijd gaan duren...
+msgProcessingOfItemsSuccess = De items zijn verwerkt en kunnen opgeslagen gaan worden.
+msgSavingItem = Item [%1] wordt opgeslagen
+msgMergeCompleted = Het samenvoegen van de items is geslaagd. Alle referenties zijn aangepast.
+msgFindReplaceValuesEqual = Waarden vervangen door dezelfde waarden is niet toegestaan. Pas de waarden aan en probeer opniew.
 lblMergeItems = %1 samenvoegen
 msgDeleteQuestionUnusedItems = Deze actie verwijdert alle ongebruikte %1. Doorgaan?
 lblDeleteUnassigned = Verwijder ongebruikte %1
