*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblRemoveAsReference = Verwijder Referentie(s)
 lblMergeTarget = Doel item
 msgMergeTargetSameAsSource = Het geselecteerde doel item is onjuist aangezien deze hetzelfde is als een van de items die samengevoegd gaat worden.
 msgMergeNoItemsSelected = Geen items geselecteerd om samen te voegen. Selecteer items in het overzicht en probeer opnieuw.
