*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblTemplateProperties = Template Properties
 lblRemoveAsReference = Remove Reference(s)
 lblMergeTarget = Target Item
 lblMergeItems = Merge %1
