*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -236,8 +236,8 @@ msgNoMappings = Please define at least one mapping
 msgNotSameState = The loan status for the selected items differ. They can not be update all at once.
 msgEnterReturnDate = Please specify the date on which the item was returned
 msgEnterDate = Please specify the date on which the loan the starts
-msgSelectPerson = Please select the person to whom the item(s) are lend
-msgContainerItemsAreAvailable = The container and its items are all available and can be lend
+msgSelectPerson = Please select the person to whom the item(s) are to be lent
+msgContainerItemsAreAvailable = The container and its items are all available and can be lent
 msgAllItemsAreAvailable = All the %1 items are available and can be lent
 msgContainerItemsLoanInformation = Updating the loan information for this container and all of its items. The items are currently all borrowed and can all be registered as returned.
 msgAllItemsLoanInformation = Updating the information of %1 items. The items are currently all borrowed and can all be registered as returned.
